--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "NiaNet"
-version = "1.0.0"
+version = "1.1.1"
 description = "Designing and constructing neural network topologies using nature-inspired algorithms"
 authors = ["Sašo Pavlič <saso.pavlic@student.um.si>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
 torch = "^1.11.0"
 scikit-learn = "^1.0.2"
 numpy = "^1.22.3"
