--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ name = "NiaNet"
 version = "1.1.1"
 description = "Designing and constructing neural network topologies using nature-inspired algorithms"
 authors = ["Sašo Pavlič <saso.pavlic@student.um.si>"]
+keywords = ['adaptation', 'deep learning', 'nature-inspired algorithms', 'neural networks', 'torch']
+homepage = "https://github.com/SasoPavlic/NiaNet"
+repository = "https://github.com/SasoPavlic/NiaNet"
 readme = "README.md"
 
 [tool.poetry.dependencies]
